<resources>
    <string name="app_name">SmartRoots</string>

    <!-- ****************** -->
    <!-- * WELCOME SCREEN * -->
    <!-- ****************** -->

    <string name="activity_label_welcome">Welcome</string>
    <string name="button_login">LOGIN</string>
    <string name="button_register">REGISTER</string>
    <string name="button_companion">COMPANION PLANTING</string>

    <!-- Hints for Login and Register Dialog -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Message for Progress Dialog -->
    <string name="progress_connecting">Connecting</string>

    <!-- Errors for Login and Register Dialog -->
    <string name="username_empty">Please enter a username.</string>
    <string name="email_empty">Please enter an email.</string>
    <string name="password_empty">Please enter a password.</string>
    <string name="confirm_password_empty">Please re-enter password.</string>

    <string name="email_invalid">Email is not valid.</string>
    <string name="password_mismatch">Passwords do not match.</string>

    <!-- Notifications for Login server response -->
    <string name="login_403">Cannot login. Server is temporarily unavailable.</string>
    <string name="login_404">Cannot login. Server is currently offline.</string>
    <string name="login_unknown">Cannot login. An unknown error has occurred.</string>
    <string name="login_invalid_data">Cannot get retrieve account information.</string>

    <!-- Notifications for Register server response -->
    <string name="register_403">Cannot create account. Server is temporarily unavailable.</string>
    <string name="register_404">Cannot create account. Server is currently offline.</string>
    <string name="register_unknown">Cannot create account. Unknown error has occurred.</string>
    <string name="register_invalid_data">Cannot create account. Internal error.</string>
    <string name="register_success">Account successfully created!</string>
    <string name="register_failed">Account not created.</string>

    <!-- Toast notification for Login status -->
    <string name="login_success">Login Success!</string>
    <string name="login_failed">Login Failed.</string>

    <!-- Buttons for Login and Register Dialog -->
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <!-- Back Button notification -->
    <string name="button_back_again">Press back button again to exit.</string>

    <!-- *************** -->
    <!-- * GARDEN CARD * -->
    <!-- *************** -->

    <!-- Labels for Garden Card -->
    <string name="label_garden_name">Placeholder</string>
    <string name="label_water">Automatic Watering</string>
    <string name="label_temperature">Temperature: %.2f degrees</string>
    <string name="label_moisture">Moisture: %.2f%%</string>
    <string name="label_humidity">Humidity: %.2f%%</string>
    <string name="label_updated">Last updated %d hours ago</string>

    <!-- Buttons for Garden Card -->
    <string name="button_update">UPDATE</string>
    <string name="button_history">VIEW HISTORY</string>
    <string name="button_water">WATER NOW</string>
    <string name="button_water_setup">SETUP</string>

    <!-- Labels for Overflow Menu -->
    <string name="menu_limit">Set Limits</string>
    <string name="menu_push">Push Notification</string>
    <string name="menu_shutdown">Shut Down</string>

    <!-- *************** -->
    <!-- * GARDEN VIEW * -->
    <!-- *************** -->

    <string name="activity_label_gardenview">Username</string>
    <string name="logout">Goodbye, %s!</string>

    <!-- Title for action bar menu -->
    <string name="menu_logout">Logout</string>

    <!-- Buttons for dialogs -->
    <string name="button_scan">Scan</string>
    <string name="button_add">Add</string>

    <!-- Toast notifications for retrieving garden -->
    <string name="progress_garden">Retrieving gardens</string>

    <!-- Messages for Add Garden -->
    <string name="scan_notice_title">Search for garden?</string>
    <string name="scan_notice_content">SmartRoots will scan the WiFi network for Resilient Smart Gardens.</string>
    <string name="add_notice_title">Add garden</string>
    <string name="name_notice_title">Name garden</string>
    <string name="name_input_hint">Name</string>
    <string name="gardenname_empty">Please enter a name.</string>

    <!-- Toast notifications for Add Garden -->
    <string name="scan_wifi_disabled">Please turn on WiFi.</string>
    <string name="scan_wifi_disconnected">Please connect to a WiFi network.</string>
    <string name="scan_no_garden">No Resilient Smart Gardens found.</string>
    <string name="progress_scanning">Scanning</string>
    <string name="progress_add_garden">Adding garden</string>

    <!-- Snackbar notifications for Update -->
    <string name="update_garden_success">%s updated.</string>
    <string name="update_garden_403">%s not updated. Server temporarily offline.</string>
    <string name="update_garden_404">%s not updated. Server offline.</string>
    <string name="update_garden_invalid">%s not updated. Server error.</string>
    <string name="update_garden_unknown">%s not updated. Unknown error.</string>

    <!-- Notifications for Garden server response -->
    <string name="garden_403">Cannot retrieve gardens. Server is temporarily offline.</string>
    <string name="garden_404">Cannot retrieve gardens. Server is currently offline.</string>
    <string name="garden_unknown">Cannot retrieve gardens. Unknown error.</string>
    <string name="garden_invalid_data">Cannot retrieve gardens. Server error.</string>

    <string name="garden_add_successful">Garden added!</string>
    <string name="garden_add_failed">Garden not added. Belongs to another user!</string>
    <string name="garden_add_invalid">Garden not added. Server error.</string>
    <string name="garden_add_unknown">Garden not added. Unknown error.</string>
    <string name="garden_add_403">Garden not added. Server is temporarily offline.</string>
    <string name="garden_add_404">Garden not added. Server is currently offline.</string>

    <!-- ***************** -->
    <!-- * SETUP DIALOGS * -->
    <!-- ***************** -->

    <!-- Common button labels for setup dialogs -->
    <string name="button_done">DONE</string>

    <!-- Labels for Automatic Watering Setup -->
    <string name="label_moisture_limit">Moisture Limit</string>

    <!-- Labels for Push Notification -->
    <string name="label_push_notification">Push Notification</string>
    <string name="label_temperature_warning">Temperature Warning</string>
    <string name="label_moisture_warning">Moisture Warning</string>
    <string name="label_humidity_warning">Humidity Warning</string>
    <string name="label_minimum">Minimum</string>
    <string name="label_maximum">Maximum</string>

    <!-- ********************** -->
    <!-- * COMPANION PLANTING * -->
    <!-- ********************** -->

    <string name="progress_plant">Retrieving plants</string>
    <string name="progress_companion">Checking compatibility</string>

    <string name="plant_403">Cannot retrieve plants. Server is temporarily offline.</string>
    <string name="plant_404">Cannot retrieve plants. Server is currently offline.</string>
    <string name="plant_unknown">Cannot retrieve plants. Unknown error.</string>
    <string name="plant_invalid_data">Cannot retrieve plants. Server error.</string>

    <string name="title_companion">Companion Planting</string>
    <string name="label_plant_1">Plant 1</string>
    <string name="label_plant_2">Plant 2</string>

    <string name="plant_hint">Enter Plant</string>
    <string name="plant_hint_complete">No Plants Found</string>

    <string name="button_check_compatibility">CHECK COMPATIBILITY</string>

    <string name="plant_error">Plant %d: Please enter a valid plant.</string>

</resources>
