<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.csulb.smartroot.welcome.Welcome">

    <!-- Logo for Senior Project -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/smart_root_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/padding_welcome">

        <!-- Login button -->
        <Button
            android:id="@+id/welcome_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textColor="@color/color_text_button"
            android:textSize="@dimen/fontsize_welcome"
            android:minWidth="@dimen/flat_button_min_width"
            android:height="@dimen/flat_button_height"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="login"
            android:visibility="invisible"/>

        <!-- Register button -->
        <Button
            android:id="@+id/welcome_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:textColor="@color/color_text_button"
            android:textSize="@dimen/fontsize_welcome"
            android:minWidth="@dimen/flat_button_min_width"
            android:height="@dimen/flat_button_height"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="register"
            android:visibility="invisible"/>

        <!-- Companion button -->
        <Button
            android:id="@+id/welcome_companion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_companion"
            android:textColor="@color/color_text_button"
            android:textSize="@dimen/fontsize_welcome"
            android:minWidth="@dimen/flat_button_min_width"
            android:height="@dimen/flat_button_height"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="companion"
            android:visibility="invisible"/>
    </LinearLayout>

</LinearLayout>