<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_garden"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/card_margin_vertical"
    android:layout_marginLeft="@dimen/card_margin_horizontal"
    android:layout_marginRight="@dimen/card_margin_horizontal"
    android:layout_marginBottom="@dimen/card_margin_vertical"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation"
    android:longClickable="true">

    <!-- Toolbar for overflow menu -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Main garden card -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dialog_content_padding">

        <!-- Garden Name -->
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_garden_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fontsize_garden"/>

        <!-- Temperature -->
        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_label"
            android:paddingBottom="@dimen/padding_dense_label"
            android:text="@string/label_temperature"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fontsize_readings"/>

        <!-- Moisture -->
        <TextView
            android:id="@+id/moisture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_dense_label"
            android:text="@string/label_moisture"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fontsize_readings"/>

        <!-- Humidity -->
        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_dense_label"
            android:text="@string/label_humidity"
            android:textColor="@android:color/black"
            android:textSize="@dimen/fontsize_readings"/>

        <!-- REMOVED TO STREAMLINE CARD UI -->

        <!-- Last Updated -->
        <TextView
            android:id="@+id/updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_dense_label"
            android:text="@string/label_updated"
            android:textSize="@dimen/fontsize_updated"/>

        <!--&lt;!&ndash; Buttons for updating garden information and view history &ndash;&gt;-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--&lt;!&ndash; Update button &ndash;&gt;-->
            <!--<Button-->
                <!--android:id="@+id/button_update"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="0dp"-->
                <!--android:text="@string/button_update"-->
                <!--android:textColor="@color/color_text_button"-->
                <!--android:minWidth="@dimen/flat_button_dense_min_width"-->
                <!--android:height="@dimen/flat_button_dense_height"-->
                <!--style="@style/Widget.AppCompat.Button.Borderless"/>-->

            <!--&lt;!&ndash; View History button &ndash;&gt;-->
            <!--<Button-->
                <!--android:id="@+id/button_history"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/button_history"-->
                <!--android:textColor="@color/color_text_button"-->
                <!--android:minWidth="@dimen/flat_button_dense_min_width"-->
                <!--android:height="@dimen/flat_button_dense_height"-->
                <!--style="@style/Widget.AppCompat.Button.Borderless"/>-->
        <!--</LinearLayout>-->

        <!--&lt;!&ndash; Divider separating history and automated watering &ndash;&gt;-->
        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@android:color/darker_gray" />-->

        <!--&lt;!&ndash; Automatic Watering &ndash;&gt;-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingTop="@dimen/padding_label"-->
            <!--android:text="@string/label_water"-->
            <!--android:textSize="@dimen/fontsize_readings"-->
            <!--android:textColor="@android:color/black"/>-->

        <!--&lt;!&ndash; Buttons for watering garden and setting up automation &ndash;&gt;-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--&lt;!&ndash; Water Now button &ndash;&gt;-->
            <!--<Button-->
                <!--android:id="@+id/button_water"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingLeft="0dp"-->
                <!--android:text="@string/button_water"-->
                <!--android:textColor="@color/color_text_button"-->
                <!--android:minWidth="@dimen/flat_button_dense_min_width"-->
                <!--android:height="@dimen/flat_button_dense_height"-->
                <!--style="@style/Widget.AppCompat.Button.Borderless"/>-->

            <!--&lt;!&ndash; Setup button &ndash;&gt;-->
            <!--<Button-->
                <!--android:id="@+id/button_setup"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/button_water_setup"-->
                <!--android:textColor="@color/color_text_button"-->
                <!--android:minWidth="@dimen/flat_button_dense_min_width"-->
                <!--android:height="@dimen/flat_button_dense_height"-->
                <!--style="@style/Widget.AppCompat.Button.Borderless"/>-->
        <!--</LinearLayout>-->

    </LinearLayout>
</android.support.v7.widget.CardView>
